# llm-pii-gateway

./: .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  THREAT_MODEL.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
bench/: Bench.java  README.md  bench_py.py
custom_guardrails/: __init__.py  kpii_guardrail.py
docs/: NOTES.md  onboarding.md  operations.md
kpii/: __init__.py  audit.py  engine.py  injection.py  masking.py  metrics.py  normalize.py  openai_gateway.py  policy.py  types.py  validators.py
kpii/detectors/: __init__.py  presidio_client.py  regex_detectors.py
litellm/: config.yaml
litellm/custom_guardrails/: __init__.py
policies/: default.yaml  with-ner.yaml
presidio/: Dockerfile  nlp_conf.yaml
tests/fake_upstream/: Dockerfile  app.py
tests/fixtures/: korean_pii_corpus.jsonl
tests/integration/: test_gateway.py
tests/unit/: test_audit.py  test_audit_log.py  test_detectors.py  test_engine.py  test_fake_upstream.py  test_guardrail.py  test_guardrail_ner.py  test_guardrail_response.py  test_hardening.py  test_injection.py  test_masking.py  test_metrics.py  test_ner_pipeline.py  test_no_leak.py  test_normalize.py  test_openai_gateway.py  test_policy.py  test_presidio_client.py  test_presidio_live.py  test_stream.py  test_validators.py
tests/util/: adversarial.py  eval.py  gen.py  injection_eval.py  injection_ml_eval.py
