[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kpii"
version = "0.1.0"
description = "Korean PII detection & reversible masking core for an LLM PII gateway"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
ner = ["httpx>=0.27", "presidio-analyzer", "spacy>=3.8"]    # L2: 클라이언트 + in-process 검증(한국어 모델은 별도 다운로드)
proxy = ["litellm[proxy]>=1.93", "fastapi", "uvicorn[standard]", "prometheus-client"]  # 프록시(E2E)+fake-upstream+메트릭
dev = ["pytest>=8", "ruff", "httpx>=0.27", "prometheus-client"]   # httpx: fake-upstream, prometheus: 메트릭 테스트

[tool.setuptools]
packages = ["kpii", "kpii.detectors"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: docker compose·네트워크가 필요한 통합 테스트 (Phase 2+, 기본 제외)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
